# inputcodex

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  build.md  err.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  feature-parity.yml  parity-exception.yml  performance.yml  release.yml  upstream-sync.yml  upstream-watch.yml
.github/scripts/: upstream_watch.py
.github/workflows/: ci.yml  upstream-watch.yml
apps/inputcodex-desktop/: Cargo.toml  build.md  err.md
apps/inputcodex-desktop/src/: governance_failure.ts  main.rs
crates/inputcodex-application/: Cargo.toml  build.md  err.md
crates/inputcodex-domain/: Cargo.toml  build.md  err.md
crates/inputcodex-infrastructure/: Cargo.toml  build.md  err.md
crates/inputcodex-parity/: Cargo.toml  build.md  err.md
crates/inputcodex-parity/src/: catalog.rs  contract.rs  fixture.rs  lib.rs  validation.rs
crates/inputcodex-parity/tests/: catalog_repository.rs  catalog_schema.rs  contract_schema.rs  error_signature.rs  fixture_safety.rs
crates/inputcodex-platform/: Cargo.toml  build.md  err.md
crates/inputcodex-presentation/: Cargo.toml  build.md  err.md
crates/inputcodex-presentation/src/: lib.rs
crates/inputcodex-presentation/tests/: presentation_state.rs
docs/adr/: 0001-pure-rust-iced-desktop.md  0002-upstream-snapshot-and-release-line.md  0003-release-snapshot-catalog-audit-decoupling.md
docs/plans/: 2026-07-21-architecture-governance.md  2026-07-21-bootstrap.md  2026-07-21-issue-12-gate-2-upstream-closeout.md  2026-07-21-issue-4-gate-1-closeout.md  2026-07-21-issue-6-gate-1-finalization.md  2026-07-21-issue-8-gate-2-transition.md  2026-07-21-issue-9-gate-2-upstream-baseline.md  2026-07-21-rust-ci-offload-implementation-plan.md  2026-07-21-rust-ci-offload-strategy.md  2026-07-22-issue-14-gate-2-upstream-watch.md  2026-07-22-issue-17-gate-3-rust-workspace-plan.md  2026-07-22-issue-22-gate-3-closeout.md  2026-07-22-issue-24-gate-4-feature-performance-plan.md  2026-07-22-issue-26-gate-4-feature-catalog-implementation.md  2026-07-22-issue-28-gate-4-feature-catalog-closeout.md  2026-07-22-issue-30-gate-4-post-merge-state-closeout.md  2026-07-22-issue-35-release-catalog-decoupling.md  2026-07-23-issue-37-ci-crlf-contract-fix.md  PROJECT-MASTER-PLAN.md
docs/reports/: 2026-07-21-bootstrap-closeout.md  2026-07-21-main-protection-rollout.md  2026-07-21-upstream-v1.2.41-sync.md  2026-07-23-upstream-v1.2.42-sync.md  (+15 more)
parity/: README.md
upstream/: source-lock.json
(+98 files in other folders)
